2006-04-10  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_event):
	Starting the ringbuffer when we did not acquire it can cause
	a deadlock, is pointless and causes nasty things for
	subclasses. 
	Fixes gst-launch audiotestsrc num-buffers=0 ! alsasink.

2006-04-10  Wim Taymans  <wim@fluendo.com>

	* ext/ogg/gstoggdemux.c: (gst_ogg_pad_src_query),
	(gst_ogg_demux_receive_event), (gst_ogg_pad_event),
	(gst_ogg_demux_chain_peer), (gst_ogg_pad_submit_packet),
	(gst_ogg_demux_submit_buffer), (gst_ogg_demux_get_data),
	(gst_ogg_demux_deactivate_current_chain),
	(gst_ogg_demux_activate_chain), (gst_ogg_demux_perform_seek),
	(gst_ogg_demux_bisect_forward_serialno),
	(gst_ogg_demux_find_chains), (gst_ogg_demux_chain):
	Add some more debugging.

2006-04-10  Wim Taymans  <wim@fluendo.com>

	* ext/theora/theoradec.c: (theora_dec_src_event),
	(theora_handle_data_packet):
	Some more debug info.

	* tests/examples/seek/seek.c: (start_seek), (main):
	Print element messages too.

2006-04-09  Sebastien Moutte  <sebastien@moutte.net>

	* gst/audioresample/debug.h:
	  replace debug macros with variable number of parameters
	  by a simple alias to gstreamer standard debug macros 
	 (#define RESAMPLE_ERROR GST_ERROR, __VA_ARGS__ is not
	  supported by MSVC 6.0 and 7.1)
	* gst/audioresample/resample.h:
	  define M_PI and rint for WIN32
	* win32/common/libgstaudio.def:
	* win32/common/libgstriff.def:
	* win32/common/libgsttag.def:
	* win32/common/libgstvideo.def:
	  add new exported functions
	* win32/vs6:
	  update project files

2006-04-08  Stefan Kost  <ensonic@users.sf.net>

	* ext/alsa/gstalsamixeroptions.c:
	(gst_alsa_mixer_options_class_init):
	* ext/alsa/gstalsamixertrack.c: (gst_alsa_mixer_track_class_init):
	* ext/ogg/gstoggdemux.c: (gst_ogg_pad_class_init):
	* ext/ogg/gstoggmux.c: (gst_ogg_mux_class_init):
	* ext/ogg/gstoggparse.c: (gst_ogg_parse_class_init):
	* gst-libs/gst/audio/gstaudioclock.c: (gst_audio_clock_class_init):